--- a/website/Jenkinsfile
+++ b/website/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
 
       steps {
 
-      	sh 'docker build -t website .'
+      	sh 'docker build -t website website/'
 
       } 
   }
