--- a/website/Jenkinsfile
+++ b/website/Jenkinsfile
@@ -20,6 +20,13 @@ pipeline {
 
       } 
   }
+        stage('Deploy Container') {
 
+      steps {
+
+      	sh 'docker run -d -P website '
+
+      } 
+  }
 } 
 }
