--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -1,3 +1,4 @@
 FROM php:7.4-cli
 COPY . /var/lib/jenkins/workspace/Build-PHP/my-app
 WORKDIR /var/lib/jenkins/workspace/Build-PHP/my-app
+CMD [ "php", "./config.php" ]
