--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -1,4 +1,5 @@
-FROM php:7.4-cli
+FROM tomcat
 COPY . /var/lib/jenkins/workspace/Build-PHP/my-app
 WORKDIR /var/lib/jenkins/workspace/Build-PHP/my-app
-CMD [ "php", "./config.php" ]
+EXPOSE 8080
+CMD /usr/local/tomcat/bin/catalina.sh run
